# cpp_experiments

custom_tie/: CMakeLists.txt  custom_tie.h  custom_tuple.h  main.cpp
custom_type_traits/: CMakeLists.txt  common_traits.h  custom_type_traits.h  is_floating_type.h  is_integral_type.h  main.cpp
templates_examples/: CMakeLists.txt  assign_different_types.h  common_type_example.h  deduction_guides.h  default_template_parameters.h  main.cpp  specializations.h  variadic_examples.h
